Revert "improved 404 page #204 (#206)"
This reverts commit e4b1aa6300a935286b8bc8bdad39c30a3e23f9d0.

--- a/themes/grass/layouts/404.html
+++ b/themes/grass/layouts/404.html
@@ -4,15 +4,11 @@
 </head>
 
 <body>
-
-{{ define "main"}}
-    <main id="main">
-      <div>
-       <h1>Sorry the page you are looking is missing...</h1>
-       <h2 id="title"><a href="{{ "/" | relURL }}">Go Home</a></h2>
-      </div>
-    </main>
-{{ end }}
+<h1></h1>
 
 
+
+<hr>
+<address></address>
+<!-- hhmts start -->Last modified: Mon Aug 12 16:33:41 CEST 2019 <!-- hhmts end -->
 </body> </html>
